--- a/app/src/main/res/layout/activity_filesystest.xml
+++ b/app/src/main/res/layout/activity_filesystest.xml
@@ -6,4 +6,24 @@
     android:layout_height="match_parent"
     tools:context="com.example.td.phonegellary.filesystest">
 
+    <Button
+        android:id="@+id/btn_TakePic"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        android:layout_marginLeft="136dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="96dp"
+        />
+
+    <ImageView
+        android:id="@+id/imageView16"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@mipmap/ic_launcher"
+        android:layout_marginBottom="105dp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_TakePic"
+        android:layout_marginLeft="156dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 </android.support.constraint.ConstraintLayout>
