--- a/app/src/main/res/layout/activity_filesystest.xml
+++ b/app/src/main/res/layout/activity_filesystest.xml
@@ -14,16 +14,16 @@
         android:layout_marginLeft="136dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="96dp"
+        android:layout_marginBottom="99dp"
         />
 
     <ImageView
-        android:id="@+id/imageView16"
+        android:id="@+id/imageViewTest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/ic_launcher"
         android:layout_marginBottom="105dp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_TakePic"
         android:layout_marginLeft="156dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/btn_TakePic"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:srcCompat="@mipmap/ic_launcher" />
 </android.support.constraint.ConstraintLayout>
