--- a/app/src/main/res/layout/activity_filesystest.xml
+++ b/app/src/main/res/layout/activity_filesystest.xml
@@ -21,9 +21,12 @@
         android:id="@+id/imageViewTest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="105dp"
-        android:layout_marginLeft="156dp"
+        android:layout_marginBottom="95dp"
+        android:layout_marginLeft="153dp"
         app:layout_constraintBottom_toTopOf="@+id/btn_TakePic"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:srcCompat="@mipmap/ic_launcher" />
+        app:srcCompat="@mipmap/ic_launcher"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintVertical_bias="1.0" />
 </android.support.constraint.ConstraintLayout>
