--- a/app/src/main/res/layout/activity_filesystest.xml
+++ b/app/src/main/res/layout/activity_filesystest.xml
@@ -19,14 +19,25 @@
 
     <ImageView
         android:id="@+id/imageViewTest"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="95dp"
-        android:layout_marginLeft="153dp"
+        android:layout_width="145dp"
+        android:layout_height="145dp"
+        android:layout_marginBottom="32dp"
+        android:layout_marginLeft="108dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toTopOf="@+id/btn_TakePic"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:srcCompat="@mipmap/ic_launcher"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@mipmap/ic_launcher" />
+
+    <Button
+        android:id="@+id/btnC"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="21dp"
+        android:layout_marginTop="129dp"
+        android:text="Clean"
+        app:layout_constraintLeft_toRightOf="@+id/btn_TakePic"
+        app:layout_constraintTop_toTopOf="parent"
+        android:onClick="dbclean"/>
 </android.support.constraint.ConstraintLayout>
