--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,15 +7,16 @@
     tools:context="com.example.td.phonegellary.MainActivity">
 
     <ImageView
-        android:id="@+id/imageView10"
+        android:id="@+id/imageViewTake"
         android:layout_width="110dp"
         android:layout_height="110dp"
-        android:scaleType="fitXY"
-        app:srcCompat="@android:drawable/sym_def_app_icon"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/imageView7"
+        android:scaleType="fitXY"
+        android:visibility="invisible"
         app:layout_constraintLeft_toRightOf="@+id/imageView12"
-        android:layout_marginLeft="8dp" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView7"
+        app:srcCompat="@android:drawable/sym_def_app_icon" />
 
     <ImageView
         android:id="@+id/imageView11"
@@ -94,12 +95,10 @@
         android:id="@+id/btn_Camera"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="to_CreateTest"
-        android:text="Camera"
-        tools:layout_editor_absoluteY="5dp"
-        app:layout_constraintLeft_toRightOf="@+id/btn_PhotoM"
         android:layout_marginLeft="16dp"
-        />
+        android:text="Camera"
+        app:layout_constraintLeft_toRightOf="@+id/btn_PhotoM"
+        tools:layout_editor_absoluteY="5dp" />
 
     <Button
         android:id="@+id/btn_button3"
@@ -139,5 +138,16 @@
         tools:layout_editor_absoluteX="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/spinner" />
+
+    <Button
+        android:id="@+id/btn_Test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginLeft="136dp"
+        android:text="Test"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:onClick="to_CreateTest"/>
 
 </android.support.constraint.ConstraintLayout>
