--- a/app/src/main/res/layout/activity_photo_manage.xml
+++ b/app/src/main/res/layout/activity_photo_manage.xml
@@ -104,8 +104,8 @@
         android:layout_width="105dp"
         android:layout_height="105dp"
         app:srcCompat="@android:drawable/sym_def_app_icon"
-        tools:layout_editor_absoluteX="8dp"
-        android:layout_marginTop="8dp"
+        tools:layout_editor_absoluteX="134dp"
+        android:layout_marginTop="-121dp"
         app:layout_constraintTop_toBottomOf="@+id/editText" />
 
     <EditText
@@ -115,7 +115,7 @@
         android:layout_marginEnd="8dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:text=""
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="5dp" />
 
