--- a/app/src/main/res/layout/activity_filesystest.xml
+++ b/app/src/main/res/layout/activity_filesystest.xml
@@ -40,4 +40,15 @@
         app:layout_constraintLeft_toRightOf="@+id/btn_TakePic"
         app:layout_constraintTop_toTopOf="parent"
         android:onClick="dbclean"/>
+
+    <Button
+        android:id="@+id/btn_Request"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="48dp"
+        android:layout_marginTop="39dp"
+        android:text="Request"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:onClick="to_Request"/>
 </android.support.constraint.ConstraintLayout>
