--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,63 +22,69 @@
         android:id="@+id/imageView11"
         android:layout_width="110dp"
         android:layout_height="110dp"
-        app:srcCompat="@android:drawable/sym_def_app_icon"
-        tools:layout_editor_absoluteX="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/imageView8" />
+        android:visibility="invisible"
+        app:layout_constraintTop_toBottomOf="@+id/imageView8"
+        app:srcCompat="@android:drawable/sym_def_app_icon"
+        tools:layout_editor_absoluteX="8dp" />
 
     <ImageView
         android:id="@+id/imageView12"
         android:layout_width="110dp"
         android:layout_height="110dp"
-        android:scaleType="fitXY"
-        app:srcCompat="@android:drawable/sym_def_app_icon"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/imageView9"
+        android:scaleType="fitXY"
+        android:visibility="invisible"
         app:layout_constraintLeft_toRightOf="@+id/imageView11"
-        android:layout_marginLeft="8dp" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView9"
+        app:srcCompat="@android:drawable/sym_def_app_icon" />
 
     <ImageView
         android:id="@+id/imageView7"
         android:layout_width="110dp"
         android:layout_height="110dp"
-        android:scaleType="fitXY"
-        app:srcCompat="@android:drawable/sym_def_app_icon"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4"
+        android:scaleType="fitXY"
+        android:visibility="invisible"
         app:layout_constraintLeft_toRightOf="@+id/imageView9"
-        android:layout_marginLeft="8dp" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView4"
+        app:srcCompat="@android:drawable/sym_def_app_icon" />
 
     <ImageView
         android:id="@+id/imageView8"
         android:layout_width="110dp"
         android:layout_height="110dp"
-        app:srcCompat="@android:drawable/sym_def_app_icon"
-        tools:layout_editor_absoluteX="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
+        android:visibility="invisible"
+        app:layout_constraintTop_toBottomOf="@+id/imageView5"
+        app:srcCompat="@android:drawable/sym_def_app_icon"
+        tools:layout_editor_absoluteX="8dp" />
 
     <ImageView
         android:id="@+id/imageView9"
         android:layout_width="110dp"
         android:layout_height="110dp"
-        android:scaleType="fitXY"
-        app:srcCompat="@android:drawable/sym_def_app_icon"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/imageView6"
+        android:scaleType="fitXY"
+        android:visibility="invisible"
         app:layout_constraintLeft_toRightOf="@+id/imageView8"
-        android:layout_marginLeft="8dp" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView6"
+        app:srcCompat="@android:drawable/sym_def_app_icon" />
 
     <ImageView
         android:id="@+id/imageView6"
         android:layout_width="110dp"
         android:layout_height="110dp"
-        android:scaleType="fitXY"
-        app:srcCompat="@android:drawable/sym_def_app_icon"
-        app:layout_constraintLeft_toRightOf="@+id/imageView5"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/spinner" />
+        android:scaleType="fitXY"
+        android:visibility="invisible"
+        app:layout_constraintLeft_toRightOf="@+id/imageView5"
+        app:layout_constraintTop_toBottomOf="@+id/spinner"
+        app:srcCompat="@android:drawable/sym_def_app_icon" />
 
     <Button
         android:id="@+id/btn_PhotoM"
@@ -123,21 +129,23 @@
         android:id="@+id/imageView4"
         android:layout_width="110dp"
         android:layout_height="110dp"
-        android:scaleType="fitXY"
-        app:srcCompat="@android:drawable/sym_def_app_icon"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/spinner"
+        android:scaleType="fitXY"
+        android:visibility="invisible"
         app:layout_constraintLeft_toRightOf="@+id/imageView6"
-        android:layout_marginLeft="8dp" />
+        app:layout_constraintTop_toBottomOf="@+id/spinner"
+        app:srcCompat="@android:drawable/sym_def_app_icon" />
 
     <ImageView
         android:id="@+id/imageView5"
         android:layout_width="110dp"
         android:layout_height="110dp"
-        app:srcCompat="@android:drawable/sym_def_app_icon"
-        tools:layout_editor_absoluteX="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/spinner" />
+        android:visibility="invisible"
+        app:layout_constraintTop_toBottomOf="@+id/spinner"
+        app:srcCompat="@android:drawable/sym_def_app_icon"
+        tools:layout_editor_absoluteX="8dp" />
 
     <Button
         android:id="@+id/btn_Test"
